# Red_Eye_Removal_GPU

./: CLRadixSort.cl  CLRadixSort.cpp  CLRadixSort.hpp  CLRadixSortMain.cpp  CLRadixSortParam.hpp  CMakeCache.txt  CMakeLists.txt  README.md  RadixSortMain.cpp  candidate.h  red_eye_removal  red_eye_removal.cpp  red_eye_removal.cpp.v1  red_eye_removal_global.cpp  red_eye_removal_local.cpp  templatematch.cl  templatematch_2.cl  templatematch_3.cl  util.h
